syntax = "proto3";

package protobufs;

option go_package = "./protobufs";

enum MessageID {
	AddNewPeer = 0;
	MyPeers = 1;
	AddNewKeyWord = 2;
	RemoveKeyWord = 3;
	PeerInfo = 4;
	Back = 5;
	MainPage = 6;
	RemovePeer = 7;
	Spacer = 666;
}

message MessageHeader {
	uint64 time = 1;
	MessageID msgid = 2;
	bytes msg = 3;
}

message buttonPeerInfo {
	int64 peer_id = 1;
	int32 peer_page = 2;
	int32 current_page = 3;
}

message buttonMenuBack {
	MessageID newmenu = 1;
	optional bytes msg = 3;
}

message buttonMyPeers {
	int32 current_page = 1;
}

message buttonRemoveKeyWord {
	int64 keyword_id = 1;
	buttonPeerInfo peerInfo = 2;
}